--- a/index.html
+++ b/index.html
@@ -1,55 +1,62 @@
 <!DOCTYPE HTML>
 <html>
-<head>
+
+  <head>
     <title>DIYA, Do It Yourself AI</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="images/favicon.png">
     <link rel="stylesheet" type="text/css" href="styles/style.css">
     <meta name="theme-color" content="#90a9ae">
-</head>
-<body>
-<header>
-  <nav class="main-nav">
-    <ul>
-      <li>
+  </head>
+
+  <body>
+    <header>
+      <nav class="main-nav">
         <ul>
-          <li><a href="index.html" class="active">about</a></li>
-          <li><a href="projets.html">works</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li>
+            <ul>
+              <li><a href="index.html" class="active">about</a></li>
+              <li><a href="projets.html">works</a></li>
+              <li><a href="contact.html">Contact</a></li>
+            </ul>
+          </li>
         </ul>
-      </li>
-    </ul>
-  </nav>
-</header>
-<section id="video" class="home">
-  <h1>DIYA: Do It Yourself AI</h1>
-  <h2>E.S.T 2018</h2>
-</section>
-<section id="main-content">
-  <div class="text-intro">
-    <h2>섹션 이름</h2>
-  </div>
-  <div class="columns features">
-    <div class="one-third first">
-      <h3>여기엔</h3>
-      <p>Bacon ipsum dolor sit amet cow ham beef, ground round t-bone meatloaf fatback sirloin pork chop swine pig. Venison shoulder prosciutto turkey tri-tip kielbasa andouille ham hock beef ribs. Meatloaf meatball doner filet mignon shankle.</p>
-      <p><a href="#" class="more">En savoir plus</a></p>
-    </div>
-    <div class="one-third">
-      <h3>뭘</h3>
-      <p>Chuck venison short ribs, pork loin strip steak turducken chicken boudin doner tail cow pork chop spare ribs.</p>
-      <p><a href="#" class="more">En savoir plus</a></p>
-    </div>
-    <div class="one-third">
-      <h3>넣지</h3>
-      <p>Capicola prosciutto shankle frankfurter ham hock. Beef ribs t-bone rump, short ribs jerky turkey ham capicola pancetta filet mignon turducken boudin biltong venison shank.</p>
-      <p><a href="#" class="more">En savoir plus</a></p>
-    </div>
-  </div>
-</section>
-<footer>
-  <div class="copyright"><small>Copyright. All Rights Reserved | by <a target="_blank" rel="nofollow" href="iamsupview.be">Supview</a>.</small></div>
-</footer>
-</body>
+      </nav>
+    </header>
+    <section id="video" class="home">
+      <h1>DIYA: Do It Yourself AI</h1>
+      <h2>E.S.T 2018</h2>
+    </section>
+    <section id="main-content">
+      <div class="text-intro">
+        <h2>섹션 이름</h2>
+      </div>
+      <div class="columns features">
+        <div class="one-third first">
+          <h3>여기엔</h3>
+          <p>Bacon ipsum dolor sit amet cow ham beef, ground round t-bone meatloaf fatback sirloin pork chop swine pig.
+            Venison shoulder prosciutto turkey tri-tip kielbasa andouille ham hock beef ribs. Meatloaf meatball doner
+            filet mignon shankle.</p>
+          <p><a href="#" class="more">En savoir plus</a></p>
+        </div>
+        <div class="one-third">
+          <h3>뭘</h3>
+          <p>Chuck venison short ribs, pork loin strip steak turducken chicken boudin doner tail cow pork chop spare
+            ribs.</p>
+          <p><a href="#" class="more">En savoir plus</a></p>
+        </div>
+        <div class="one-third">
+          <h3>넣지</h3>
+          <p>Capicola prosciutto shankle frankfurter ham hock. Beef ribs t-bone rump, short ribs jerky turkey ham
+            capicola pancetta filet mignon turducken boudin biltong venison shank.</p>
+          <p><a href="#" class="more">En savoir plus</a></p>
+        </div>
+      </div>
+    </section>
+    <footer>
+      <div class="copyright"><small>Copyright. All Rights Reserved | by <a target="_blank" rel="nofollow" href="iamsupview.be">Supview</a>.</small></div>
+    </footer>
+  </body>
+
 </html>
