수정중/ 리크루팅 페이지로 변경

--- a/projets.html
+++ b/projets.html
@@ -2,11 +2,11 @@
 <html>
 
   <head>
-    <title>DIYA | Projects</title>
+    <title>DIYA | Activities</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="styles/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="images/favicon.png">
+    <link rel="stylesheet" type="text/css" href="styles/style.css">
     <meta name="theme-color" content="#90a9ae">
 
   </head>
@@ -16,26 +16,55 @@
       <nav class="main-nav">
         <ul>
           <li><a href="index.html">about</a></li>
-          <li><a href="projets.html" class="active">works</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="projets.html" class="active">activities</a></li>
+          <li><a href="contact.html" class="specialbtn">recruiting</a></li>
         </ul>
       </nav>
     </header>
     <section id="home-head" class="work">
       <h1>DIYA?</h1>
     </section>
+
     <section id="main-content">
       <div class="text-intro">
         <h2>Projets</h2>
       </div>
+
       <div class="columns">
-        <div class="img-first"><a href="#"><img src="https://t1.daumcdn.net/cfile/tistory/9908194B5B5AE6DE13" width="500px"
-              alt=""></a></div>
-        <div class="img-second"><a href="#"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS3UqTjd1Tvii78Ntze4An4XfaKrzdbuAaKqIgZeAZwk0nvmwPo"
-              alt=""></a></div>
-      </div>
-      </div>
+        <ul class="c">
+          <li>
+            <p>
+              <h3 >교육 자료 제작</h3></br>
+            </p>
+            
+            <p>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/JR2vInIE04w" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </p>
+            <p>위와 같이 제작</p>
+          </li>
+        </br>
+          <li>
+            <p>
+              <h3>팀별 스터디 진행</h3></br>
+            </p>
+            <p>
+              팀별로 스터디를 진행합니다.
+            </p>
+          </li>
+        </br>
+          <li>
+            <h3>서울대 슈퍼컴퓨터 천둥을 사용한 연구</h3></br>
+            <p>
+                가능
+              </p>
+          </li>
+
+          </ul>
+        </div>
+      
+
     </section>
+
     <footer>
       <div class="copyright"><small>Copyright. All Rights Reserved | by <a target="_blank" rel="nofollow" href="http://www.iamsupview.be">Supview</a>.</small></div>
     </footer>
