--- a/contact.html
+++ b/contact.html
@@ -2,10 +2,10 @@
 <html>
 
   <head>
-    <title>DIYA | Contact</title>
+    <title>DIYA | Recruiting</title>
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="images/favicon.png">
-    <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="styles/style.css">
     <meta name="theme-color" content="90a9ae">
   </head>
@@ -17,8 +17,8 @@
           <li>
             <ul>
               <li><a href="index.html">about</a></li>
-              <li><a href="projets.html">works</a></li>
-              <li><a href="contact.html" class="active">Contact</a></li>
+              <li><a href="projets.html">activities</a></li>
+              <li><a href="contact.html" class="specialbtn-active">recruiting</a></li>
             </ul>
           </li>
         </ul>
