--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
           <li>
             <ul>
               <li><a href="index.html" class="active">about</a></li>
-              <li><a href="projets.html">works</a></li>
-              <li><a href="contact.html">Contact</a></li>
+              <li><a href="projets.html">activities</a></li>
+              <li><a href="contact.html" class="specialbtn">recruiting</a></li>
             </ul>
           </li>
         </ul>
