customized for diya

--- a/contact.html
+++ b/contact.html
@@ -12,6 +12,11 @@
 
   <body>
     <header>
+      <nav class="logo-area">
+          <a href=index.html>
+            <img class="logo" src="images/favicon.png" alt="DIYA">
+          </a>
+        </nav>
       <nav class="main-nav">
         <ul>
           <li>
@@ -25,20 +30,21 @@
       </nav>
     </header>
     <section id="home-head" class="contact">
-      <h1>DIYA?!</h1>
+      <h1>DIYA: DO IT YOURSELF AI !</h1>
     </section>
     <section id="main-content">
       <div class="text-intro">
-        <h2>Contact</h2>
+        <h2>RECRUITING</h2>
       </div>
       <div class="columns features">
-        <form action="#" method="post" id="contact-form">
+        <!-- <form action="#" method="post" id="contact-form">
           <textarea id="message" maxlength="10000" name="message" placeholder="Wazup ?"></textarea>
           <div class="crayonico"></div>
           <input class="text-input" id="senderEmail" maxlength="50" name="email" placeholder="E-mail" type="email">
           <div class="emailico"></div>
           <input class="btn btn-input" id="sendMessage" name="sendMessage" type="submit" value="IM DONE">
-        </form>
+        </form> -->
+        <img src="images/DIYA_RECRUITING.png" alt="Recruiting Now">
       </div>
     </section>
     <footer>
