--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
 
   <body>
     <header>
+      <nav class="logo-area">
+        <a href=index.html>
+          <img class="logo" src="images/favicon.png" alt="DIYA">
+        </a>
+      </nav>
       <nav class="main-nav">
         <ul>
           <li>
@@ -30,27 +35,24 @@
     </section>
     <section id="main-content">
       <div class="text-intro">
-        <h2>섹션 이름</h2>
+        <h2>머신 러닝 동아리 DIYA</h2>
       </div>
       <div class="columns features">
         <div class="one-third first">
-          <h3>여기엔</h3>
-          <p>Bacon ipsum dolor sit amet cow ham beef, ground round t-bone meatloaf fatback sirloin pork chop swine pig.
-            Venison shoulder prosciutto turkey tri-tip kielbasa andouille ham hock beef ribs. Meatloaf meatball doner
-            filet mignon shankle.</p>
-          <p><a href="#" class="more">En savoir plus</a></p>
+          <h3>소개</h3>
+          <p>머신러닝을 활용한 자율 프로젝트를 진행하는 동아리로 머신러닝 교육 자료 제작도 함께 하고 있습니다.</p>
+          <!-- <p><a href="#" class="more">En savoir plus</a></p> -->
+        </div>
+
+        <div class="one-third">
+          <h3>목표</h3>
+          <p>통계나 컴퓨터를 전공하지 않은 사람들도 머신러닝 공부를 할 수 있도록 어려운 수식 없이 설명하는 교육자료 (텍스트 및 영상)를 만들고 이를 기반으로 향후 창업을 목표로 하고 있습니다.</p>
+          <!-- <p><a href="#" class="more">En savoir plus</a></p> -->
         </div>
         <div class="one-third">
-          <h3>뭘</h3>
-          <p>Chuck venison short ribs, pork loin strip steak turducken chicken boudin doner tail cow pork chop spare
-            ribs.</p>
-          <p><a href="#" class="more">En savoir plus</a></p>
-        </div>
-        <div class="one-third">
-          <h3>넣지</h3>
-          <p>Capicola prosciutto shankle frankfurter ham hock. Beef ribs t-bone rump, short ribs jerky turkey ham
-            capicola pancetta filet mignon turducken boudin biltong venison shank.</p>
-          <p><a href="#" class="more">En savoir plus</a></p>
+          <h3>가입문의</h3>
+          <p>2019년 3월 본 페이지를 통해 공지 예정!</p>
+          <!-- <p><a href="#" class="more">En savoir plus</a></p> -->
         </div>
       </div>
     </section>
