--- a/projets.html
+++ b/projets.html
@@ -13,6 +13,11 @@
 
   <body>
     <header>
+      <nav class="logo-area">
+          <a href=index.html>
+            <img class="logo" src="images/favicon.png" alt="DIYA">
+          </a>
+        </nav>
       <nav class="main-nav">
         <ul>
           <li><a href="index.html">about</a></li>
@@ -22,12 +27,12 @@
       </nav>
     </header>
     <section id="home-head" class="work">
-      <h1>DIYA?</h1>
+      <h1>DIYA: DO IT YOURSELF AI !</h1>
     </section>
 
     <section id="main-content">
       <div class="text-intro">
-        <h2>Projets</h2>
+        <h2>Activities</h2>
       </div>
 
       <div class="columns">
@@ -38,25 +43,35 @@
             </p>
             
             <p>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/JR2vInIE04w" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/tt0zJZMNe-Y" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </p>
-            <p>위와 같이 제작</p>
+            <p>
+              <ul class="b">
+                <li>교육자료 내용에 맞춰 영상 제작</li>
+                <li>대사 작성 및 애니메이션 제작 후 더빙</li>
+                <li>완성된 영상 업로드</li>
+            </ul>
+          </p>
           </li>
         </br>
           <li>
             <p>
-              <h3>팀별 스터디 진행</h3></br>
+              <h3>팀별 스터디 진행 및 논문 작성</h3></br>
             </p>
-            <p>
-              팀별로 스터디를 진행합니다.
+            <p >
+              <ol class="g">
+                <li>NLP (Natural Language Processing) 팀</li>
+                <li>보건 경제팀</li>
+                
+              </ol>
             </p>
           </li>
         </br>
           <li>
             <h3>서울대 슈퍼컴퓨터 천둥을 사용한 연구</h3></br>
             <p>
-                가능
-              </p>
+                <a href="http://chundoong.snu.ac.kr/">천둥 홈페이지</a>
+            </p>
           </li>
 
           </ul>
