--- a/projets.html
+++ b/projets.html
@@ -15,7 +15,7 @@
     <header>
       <nav class="logo-area">
           <a href=index.html>
-            <img class="logo" src="images/favicon.png" alt="DIYA">
+            <img class="logo" src="images/logo.png" alt="DIYA">
           </a>
         </nav>
       <nav class="main-nav">
