add experimental javascript

--- a/index.html
+++ b/index.html
@@ -59,6 +59,10 @@
     <footer>
       <div class="copyright"><small>Copyright. All Rights Reserved | by <a target="_blank" rel="nofollow" href="iamsupview.be">Supview</a>.</small></div>
     </footer>
+
+    <script src="scripts/testing.js"></script>
+
+
   </body>
 
 </html>
