--- a/contact.html
+++ b/contact.html
@@ -50,6 +50,7 @@
     <footer>
       <div class="copyright"><small>Copyright. All Rights Reserved | by <a target="_blank" rel="nofollow" href="http://www.iamsupview.be">Supview</a>.</small></div>
     </footer>
+    <script src="scripts/testing.js"></script>
   </body>
 
 </html>
