change tabstop to 4

--- a/index.html
+++ b/index.html
@@ -1,68 +1,70 @@
 <!DOCTYPE HTML>
 <html>
 
-  <head>
-    <title>DIYA, Do It Yourself AI</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" href="images/favicon.png">
-    <link rel="stylesheet" type="text/css" href="styles/style.css">
-    <meta name="theme-color" content="#90a9ae">
-  </head>
+    <head>
+        <title>DIYA, Do It Yourself AI</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="shortcut icon" href="images/favicon.png">
+        <link rel="stylesheet" type="text/css" href="styles/style.css">
+        <meta name="theme-color" content="#90a9ae">
+    </head>
 
-  <body>
-    <header>
-      <nav class="logo-area">
-        <a href=index.html>
-          <img class="logo" src="images/logo.png" alt="DIYA">
-        </a>
-      </nav>
-      <nav class="main-nav">
-        <ul>
-          <li>
-            <ul>
-              <li><a href="index.html" class="active">about</a></li>
-              <li><a href="projets.html">activities</a></li>
-              <li><a href="contact.html" class="specialbtn">recruiting</a></li>
-            </ul>
-          </li>
-        </ul>
-      </nav>
-    </header>
-    <section id="video" class="home">
-      <h1>DIYA: Do It Yourself AI</h1>
-      <h2>E.S.T 2018</h2>
-    </section>
-    <section id="main-content">
-      <div class="text-intro">
-        <h2>머신 러닝 동아리 DIYA</h2>
-      </div>
-      <div class="columns features">
-        <div class="one-third first">
-          <h3>소개</h3>
-          <p>머신러닝을 활용한 자율 프로젝트를 진행하는 동아리로 머신러닝 교육 자료 제작도 함께 하고 있습니다.</p>
-          <!-- <p><a href="#" class="more">En savoir plus</a></p> -->
-        </div>
+    <body>
+        <header>
+            <nav class="logo-area">
+                <a href=index.html>
+                    <img class="logo" src="images/logo.png" alt="DIYA">
+                </a>
+            </nav>
+            <nav class="main-nav">
+                <ul>
+                    <li>
+                        <ul>
+                            <li><a href="index.html" class="active">about</a></li>
+                            <li><a href="projets.html">activities</a></li>
+                            <li><a href="contact.html" class="specialbtn">recruiting</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </nav>
+        </header>
+        <section id="video" class="home">
+            <h1>DIYA: Do It Yourself AI</h1>
+            <h2>E.S.T 2018</h2>
+        </section>
+        <section id="main-content">
+            <div class="text-intro">
+                <h2>머신 러닝 동아리 DIYA</h2>
+            </div>
+            <div class="columns features">
+                <div class="one-third first">
+                    <h3>소개</h3>
+                    <p>머신러닝을 활용한 자율 프로젝트를 진행하는 동아리로 머신러닝 교육 자료 제작도 함께 하고 있습니다.</p>
+                    <!-- <p><a href="#" class="more">En savoir plus</a></p> -->
+                </div>
 
-        <div class="one-third">
-          <h3>목표</h3>
-          <p>통계나 컴퓨터를 전공하지 않은 사람들도 머신러닝 공부를 할 수 있도록 어려운 수식 없이 설명하는 교육자료 (텍스트 및 영상)를 만들고 이를 기반으로 향후 창업을 목표로 하고 있습니다.</p>
-          <!-- <p><a href="#" class="more">En savoir plus</a></p> -->
-        </div>
-        <div class="one-third">
-          <h3>가입문의</h3>
-          <p>2019년 3월 본 페이지를 통해 공지 예정!</p>
-          <!-- <p><a href="#" class="more">En savoir plus</a></p> -->
-        </div>
-      </div>
-    </section>
-    <footer>
-      <div class="copyright"><small>Copyright. All Rights Reserved | by <a target="_blank" rel="nofollow" href="iamsupview.be">Supview</a>.</small></div>
-    </footer>
+                <div class="one-third">
+                    <h3>목표</h3>
+                    <p>통계나 컴퓨터를 전공하지 않은 사람들도 머신러닝 공부를 할 수 있도록 어려운 수식 없이 설명하는 교육자료 (텍스트 및 영상)를 만들고 이를 기반으로 향후 창업을 목표로 하고
+                        있습니다.</p>
+                    <!-- <p><a href="#" class="more">En savoir plus</a></p> -->
+                </div>
+                <div class="one-third">
+                    <h3>가입문의</h3>
+                    <p>2019년 3월 본 페이지를 통해 공지 예정!</p>
+                    <!-- <p><a href="#" class="more">En savoir plus</a></p> -->
+                </div>
+            </div>
+        </section>
+        <footer>
+            <div class="copyright"><small>Copyright. All Rights Reserved | by <a target="_blank" rel="nofollow"
+                        href="iamsupview.be">Supview</a>.</small></div>
+        </footer>
 
-    <script src="scripts/testing.js"></script>
+        <script src="scripts/testing.js"></script>
 
 
-  </body>
+    </body>
 
 </html>
