--- a/contact.html
+++ b/contact.html
@@ -1,56 +1,57 @@
 <!DOCTYPE HTML>
 <html>
 
-  <head>
-    <title>DIYA | Recruiting</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" href="images/favicon.png">
-    <link rel="stylesheet" type="text/css" href="styles/style.css">
-    <meta name="theme-color" content="90a9ae">
-  </head>
+    <head>
+        <title>DIYA | Recruiting</title>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="shortcut icon" href="images/favicon.png">
+        <link rel="stylesheet" type="text/css" href="styles/style.css">
+        <meta name="theme-color" content="90a9ae">
+    </head>
 
-  <body>
-    <header>
-      <nav class="logo-area">
-          <a href=index.html>
-            <img class="logo" src="images/logo.png" alt="DIYA">
-          </a>
-        </nav>
-      <nav class="main-nav">
-        <ul>
-          <li>
-            <ul>
-              <li><a href="index.html">about</a></li>
-              <li><a href="projets.html">activities</a></li>
-              <li><a href="contact.html" class="specialbtn-active">recruiting</a></li>
-            </ul>
-          </li>
-        </ul>
-      </nav>
-    </header>
-    <section id="home-head" class="contact">
-      <h1>DIYA: DO IT YOURSELF AI !</h1>
-    </section>
-    <section id="main-content">
-      <div class="text-intro">
-        <h2>RECRUITING</h2>
-      </div>
-      <div class="columns features">
-        <!-- <form action="#" method="post" id="contact-form">
+    <body>
+        <header>
+            <nav class="logo-area">
+                <a href=index.html>
+                    <img class="logo" src="images/logo.png" alt="DIYA">
+                </a>
+            </nav>
+            <nav class="main-nav">
+                <ul>
+                    <li>
+                        <ul>
+                            <li><a href="index.html">about</a></li>
+                            <li><a href="projets.html">activities</a></li>
+                            <li><a href="contact.html" class="specialbtn-active">recruiting</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </nav>
+        </header>
+        <section id="home-head" class="contact">
+            <h1>DIYA: DO IT YOURSELF AI !</h1>
+        </section>
+        <section id="main-content">
+            <div class="text-intro">
+                <h2>RECRUITING</h2>
+            </div>
+            <div class="columns features">
+                <!-- <form action="#" method="post" id="contact-form">
           <textarea id="message" maxlength="10000" name="message" placeholder="Wazup ?"></textarea>
           <div class="crayonico"></div>
           <input class="text-input" id="senderEmail" maxlength="50" name="email" placeholder="E-mail" type="email">
           <div class="emailico"></div>
           <input class="btn btn-input" id="sendMessage" name="sendMessage" type="submit" value="IM DONE">
         </form> -->
-        <img src="images/DIYA_RECRUITING.png" alt="Recruiting Now">
-      </div>
-    </section>
-    <footer>
-      <div class="copyright"><small>Copyright. All Rights Reserved | by <a target="_blank" rel="nofollow" href="http://www.iamsupview.be">Supview</a>.</small></div>
-    </footer>
-    <script src="scripts/testing.js"></script>
-  </body>
+                <img src="images/DIYA_RECRUITING.png" alt="Recruiting Now">
+            </div>
+        </section>
+        <footer>
+            <div class="copyright"><small>Copyright. All Rights Reserved | by <a target="_blank" rel="nofollow"
+                        href="http://www.iamsupview.be">Supview</a>.</small></div>
+        </footer>
+        <script src="scripts/testing.js"></script>
+    </body>
 
 </html>
