few modifications of css sheet

--- a/contact.html
+++ b/contact.html
@@ -18,15 +18,15 @@
                 </a>
             </nav>
             <nav class="main-nav">
-                <ul>
-                    <li>
+                <!-- <ul>
+                    <li> -->
                         <ul>
                             <li><a href="index.html">about</a></li>
                             <li><a href="projets.html">activities</a></li>
-                            <li><a href="contact.html" class="specialbtn-active">recruiting</a></li>
+                            <li id="recruiting"><a href="contact.html" class="specialbtn-active">recruiting</a></li>
                         </ul>
-                    </li>
-                </ul>
+                    <!-- </li>
+                </ul> -->
             </nav>
         </header>
         <section id="home-head" class="contact">
