--- a/index.html
+++ b/index.html
@@ -18,20 +18,25 @@
                 </a>
             </nav>
             <nav class="main-nav">
-                <ul>
-                    <li>
+                <!-- <ul> -->
+                    <!-- <li> -->
                         <ul>
                             <li><a href="index.html" class="active">about</a></li>
                             <li><a href="projets.html">activities</a></li>
-                            <li><a href="contact.html" class="specialbtn">recruiting</a></li>
+                            <li id="recruiting"><a href="contact.html" class="specialbtn" >recruiting</a></li>
                         </ul>
-                    </li>
-                </ul>
+                    <!-- </li> -->
+                <!-- </ul> -->
+                <!-- <div class="icon-wrapper">
+                    <div class="nav-icons"><a href="index.html" class="active">about</a></div>
+                    <div class="nav-icons"><a href="projets.html">activities</a></div>
+                    <div class="nav-icons"><a href="contact.html" class="specialbtn">recruiting</a></div>
+                </div> -->
             </nav>
         </header>
         <section id="video" class="home">
             <h1>DIYA: Do It Yourself AI</h1>
-            <h2>E.S.T 2018</h2>
+            <!-- <h2>E.S.T 2018</h2> -->
         </section>
         <section id="main-content">
             <div class="text-intro">
