--- a/projets.html
+++ b/projets.html
@@ -22,7 +22,7 @@
                 <ul>
                     <li><a href="index.html">about</a></li>
                     <li><a href="projets.html" class="active">activities</a></li>
-                    <li><a href="contact.html" class="specialbtn">recruiting</a></li>
+                    <li id="recruiting"><a href="contact.html" class="specialbtn">recruiting</a></li>
                 </ul>
             </nav>
         </header>
@@ -42,19 +42,26 @@
                             <h3>교육 자료 제작</h3></br>
                         </p>
 
-                        <p>
+                        
+                        <div class="video-container">
                             <iframe width="560" height="315" src="https://www.youtube.com/embed/tt0zJZMNe-Y"
                                 frameborder="0"
                                 allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                                 allowfullscreen></iframe>
-                        </p>
+                        </div>
+                        
                         <p>
-                            <ul class="b">
+                            <!-- <ul class="b">
                                 <li>교육자료 내용에 맞춰 영상 제작</li>
                                 <li>대사 작성 및 애니메이션 제작 후 더빙</li>
                                 <li>완성된 영상 업로드</li>
-                            </ul>
+                            </ul> -->
+
+                            교육자료 내용에 맞춰 영상 제작 </br>
+                            대사 작성 및 애니메이션 제작 후 더빙</br>
+                            완성된 영상 업로드</br>
                         </p>
+
                     </li>
                     </br>
                     <li>
@@ -62,11 +69,14 @@
                             <h3>팀별 스터디 진행 및 논문 작성</h3></br>
                         </p>
                         <p>
-                            <ol class="g">
+                            <!-- <ol class="g">
                                 <li>NLP (Natural Language Processing) 팀</li>
                                 <li>보건 경제팀</li>
 
-                            </ol>
+                            </ol> -->
+
+                            NLP (Natural Language Processing) 팀 </br>
+                            보건 경제팀
                         </p>
                     </li>
                     </br>
