add autoscroll feature

--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
             <div class="text-intro">
                 <h2>RECRUITING</h2>
             </div>
-            <div class="columns features">
+            <div class="columns features" id="poster">
                 <!-- <form action="#" method="post" id="contact-form">
           <textarea id="message" maxlength="10000" name="message" placeholder="Wazup ?"></textarea>
           <div class="crayonico"></div>
@@ -44,7 +44,7 @@
           <div class="emailico"></div>
           <input class="btn btn-input" id="sendMessage" name="sendMessage" type="submit" value="IM DONE">
         </form> -->
-                <img src="images/DIYA_RECRUITING.png" alt="Recruiting Now">
+                <img src="images/DIYA_RECRUITING.png" alt="Recruiting Now" >
             </div>
         </section>
         <footer>
