--- a/contact.html
+++ b/contact.html
@@ -33,10 +33,10 @@
             <h1>DIYA: DO IT YOURSELF AI !</h1>
         </section>
         <section id="main-content">
-            <div class="text-intro">
+            <div class="text-intro" id="poster">
                 <h2>RECRUITING</h2>
             </div>
-            <div class="columns features" id="poster">
+            <div class="columns features" >
                 <!-- <form action="#" method="post" id="contact-form">
           <textarea id="message" maxlength="10000" name="message" placeholder="Wazup ?"></textarea>
           <div class="crayonico"></div>
