--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
             </nav>
             <nav class="main-nav">
                 <!-- <ul> -->
-                    <!-- <li> -->
-                        <ul>
-                            <li><a href="index.html" class="active">about</a></li>
-                            <li><a href="projets.html">activities</a></li>
-                            <li id="recruiting"><a href="contact.html" class="specialbtn" >recruiting</a></li>
-                        </ul>
-                    <!-- </li> -->
+                <!-- <li> -->
+                <ul>
+                    <li><a href="index.html" class="active">about</a></li>
+                    <li><a href="projets.html">activities</a></li>
+                    <li id="recruiting"><a href="contact.html" class="specialbtn">recruiting</a></li>
+                </ul>
+                <!-- </li> -->
                 <!-- </ul> -->
                 <!-- <div class="icon-wrapper">
                     <div class="nav-icons"><a href="index.html" class="active">about</a></div>
@@ -63,8 +63,34 @@
             </div>
         </section>
         <footer>
+            <div class="leftside">
+                <ul class="socialmediaicons">
+                    <li>
+                        <a href="https://www.youtube.com/channel/UCl2TqpBt6gBU7ar_FYHp8Ng" target="_blank">
+                            <i class="fa fa-youtube">
+                                <img src="images/youtube.png" alt="youtube">
+                            </i>
+                    </li>
+                    <li>
+                        <a href="https://www.facebook.com/DoItYourselfAI" target="_blank">
+                            <i class="fa fa-facebook">
+                                <img src="images/facebook.png" alt="facebook">
+                            </i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://cafe.naver.com/doityourselfai" target="_blank">
+                            <i class="fa fa-navercafe">
+                                <img src="images/navercafe.png" alt="naver cafe">
+                            </i>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+
+
             <div class="copyright"><small>Copyright. All Rights Reserved | by <a target="_blank" rel="nofollow"
-                        href="iamsupview.be">Supview</a>.</small></div>
+                        href="#">Supview</a>.</small></div>
         </footer>
 
 
