--- a/contact.html
+++ b/contact.html
@@ -48,9 +48,35 @@
             </div>
         </section>
         <footer>
-            <div class="copyright"><small>Copyright. All Rights Reserved | by <a target="_blank" rel="nofollow"
-                        href="http://www.iamsupview.be">Supview</a>.</small></div>
-        </footer>
+                <div class="leftside">
+                    <ul class="socialmediaicons">
+                        <li>
+                            <a href="https://www.youtube.com/channel/UCl2TqpBt6gBU7ar_FYHp8Ng" target="_blank">
+                                <i class="fa fa-youtube">
+                                    <img src="images/youtube.png" alt="youtube">
+                                </i>
+                        </li>
+                        <li>
+                            <a href="https://www.facebook.com/DoItYourselfAI" target="_blank">
+                                <i class="fa fa-facebook">
+                                    <img src="images/facebook.png" alt="facebook">
+                                </i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://cafe.naver.com/doityourselfai" target="_blank">
+                                <i class="fa fa-navercafe">
+                                    <img src="images/navercafe.png" alt="naver cafe">
+                                </i>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+    
+    
+                <div class="copyright"><small>Copyright. All Rights Reserved | by <a target="_blank" rel="nofollow"
+                            href="#">Supview</a>.</small></div>
+            </footer>
         <script src="scripts/testing.js"></script>
     </body>
 
