mod mobile ui title section

--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
             </nav>
         </header>
         <section id="home-head" class="contact">
-            <h1>DIYA: DO IT YOURSELF AI !</h1>
+            <h1>DIYA: DO IT YOURSELF AI</h1>
         </section>
         <section id="main-content">
             <div class="text-intro" id="poster">
