--- a/projets.html
+++ b/projets.html
@@ -27,7 +27,7 @@
             </nav>
         </header>
         <section id="home-head" class="work">
-            <h1>DIYA: DO IT YOURSELF AI !</h1>
+            <h1>DIYA: DO IT YOURSELF AI</h1>
         </section>
 
         <section id="main-content">
