--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
         <link rel="shortcut icon" href="images/favicon.png">
         <link rel="stylesheet" type="text/css" href="styles/style.css">
         <meta name="theme-color" content="#90a9ae">
+        <meta property="og:url"                content="https://diya.sytes.net" />
+        <meta property="og:type"               content="website" />
+        <meta property="og:title"              content="DIYA, Do It Yourself AI !" />
+        <meta property="og:description"        content="Machine Learning Club" />
+        <meta property="og:image"              content="https://diya.sytes.net/images/DIYA_Textlogo.png" />
+
     </head>
 
     <body>
