Activities 탭의 내용 수정

--- a/projets.html
+++ b/projets.html
@@ -75,15 +75,14 @@
 
                             </ol> -->
 
-                            NLP (Natural Language Processing) 팀 </br>
-                            보건 경제팀
-                        </p>
-                    </li>
-                    </br>
-                    <li>
-                        <h3>서울대 슈퍼컴퓨터 천둥을 사용한 연구</h3></br>
-                        <p>
-                            <a href="http://chundoong.snu.ac.kr/">천둥 홈페이지</a>
+                            머신러닝 기초 스터디 (Google Developers)
+                            Reinforcement Learning 스터디 (Sutton, 2018)</br>
+                            Natural Language Processing 스터디 (Standford cs224n)</br>
+                            Financial Mathematics (MIT 18.S096)</br>
+                            Topic Modeling을 통한 정치적 다원화 연구</br>
+                            Panel Data의 Graphical Representation 연구</br>
+
+
                         </p>
                     </li>
 
