지원서 작성 페이지로 이어지는 버튼 추가

--- a/contact.html
+++ b/contact.html
@@ -36,15 +36,10 @@
             <div class="text-intro" id="poster">
                 <h2>RECRUITING</h2>
             </div>
-            <div class="columns features" >
-                <!-- <form action="#" method="post" id="contact-form">
-          <textarea id="message" maxlength="10000" name="message" placeholder="Wazup ?"></textarea>
-          <div class="crayonico"></div>
-          <input class="text-input" id="senderEmail" maxlength="50" name="email" placeholder="E-mail" type="email">
-          <div class="emailico"></div>
-          <input class="btn btn-input" id="sendMessage" name="sendMessage" type="submit" value="IM DONE">
-        </form> -->
-                <img src="images/DIYA_RECRUITING.png" alt="Recruiting Now" >
+            <div style="display:flex; flex-direction: column;" class="columns features" >
+                <button style="width:80%; align-self: center; font-weight: 700;" id="apply-button" onclick="location.href='https://goo.gl/forms/FgZ9LpCYHs2SxRIJ3'"> > 지원서 작성하기 < </button>
+                <img style="margin-top:1.2rem; margin-bottom:0.8rem;" src="images/DIYA_RECRUITING.png" alt="Recruiting Now" >
+                <button style="width:80%; align-self: center; font-weight: 700;" id="apply-button" onclick="location.href='https://goo.gl/forms/FgZ9LpCYHs2SxRIJ3'"> > 지원서 작성하기 < </button>
             </div>
         </section>
         <footer>
