--- a/index.html
+++ b/index.html
@@ -50,21 +50,22 @@
             </div>
             <div class="columns features">
                 <div class="one-third first">
-                    <h3>소개</h3>
+                    <h3 class="introh">소개</h3>
                     <p>머신러닝을 활용한 자율 프로젝트를 진행하는 동아리로 머신러닝 교육 자료 제작도 함께 하고 있습니다.</p>
                     <!-- <p><a href="#" class="more">En savoir plus</a></p> -->
                 </div>
 
                 <div class="one-third">
-                    <h3>목표</h3>
+                    <h3 class="introh">목표</h3>
                     <p>통계나 컴퓨터를 전공하지 않은 사람들도 머신러닝 공부를 할 수 있도록 어려운 수식 없이 설명하는 교육자료 (텍스트 및 영상)를 만들고 이를 기반으로 향후 창업을 목표로 하고
                         있습니다.</p>
                     <!-- <p><a href="#" class="more">En savoir plus</a></p> -->
                 </div>
                 <div class="one-third">
-                    <h3>가입문의</h3>
-                    <p>2019년 3월 본 페이지를 통해 공지 예정!</p>
-                    <!-- <p><a href="#" class="more">En savoir plus</a></p> -->
+                    <h3 class="introh">가입 신청</h3>
+                    <p style="text-align: center; font-size: 1.05rem; font-style: italic;">현재 가입 신청을 받고 있습니다.</p><p style="text-align: justify;">3월 23일 까지 아래 링크를 통해 지원서를 제출하세요.</p>
+                    
+                    <button id="apply-button" onclick="location.href='https://goo.gl/forms/FgZ9LpCYHs2SxRIJ3'">지원서 작성하기</button>
                 </div>
             </div>
         </section>
