--- a/projets.html
+++ b/projets.html
@@ -75,7 +75,7 @@
 
                             </ol> -->
 
-                            머신러닝 기초 스터디 (Google Developers)
+                            머신러닝 기초 스터디 (Google Developers)</br>
                             Reinforcement Learning 스터디 (Sutton, 2018)</br>
                             Natural Language Processing 스터디 (Standford cs224n)</br>
                             Financial Mathematics (MIT 18.S096)</br>
