가입 관련 페이지 가림

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <ul>
                     <li><a href="index.html" class="active">about</a></li>
                     <li><a href="projets.html">activities</a></li>
-                    <li id="recruiting"><a href="contact.html" class="specialbtn">recruiting</a></li>
+                    <li id="recruiting"><a href="#" class="specialbtn">recruiting</a></li>
                 </ul>
                 <!-- </li> -->
                 <!-- </ul> -->
@@ -62,10 +62,9 @@
                     <!-- <p><a href="#" class="more">En savoir plus</a></p> -->
                 </div>
                 <div class="one-third">
-                    <h3 class="introh">가입 신청</h3>
-                    <p style="text-align: center; font-size: 1.05rem; font-style: italic;">현재 가입 신청을 받고 있습니다.</p><p style="text-align: justify;">3월 23일 까지 아래 링크를 통해 지원서를 제출하세요.</p>
+                    <h3 class="introh">가입 문의</h3>
+                    <p style="text-align: justify;">2기 회원 모집이 끝났습니다. 3기 모집 공고를 기다려주세요!</p>
                     
-                    <button id="apply-button" onclick="location.href='https://goo.gl/forms/FgZ9LpCYHs2SxRIJ3'">지원서 작성하기</button>
                 </div>
             </div>
         </section>
