--- a/projets.html
+++ b/projets.html
@@ -22,7 +22,7 @@
                 <ul>
                     <li><a href="index.html">about</a></li>
                     <li><a href="projets.html" class="active">activities</a></li>
-                    <li id="recruiting"><a href="contact.html" class="specialbtn">recruiting</a></li>
+                    <li id="recruiting"><a href="#" class="specialbtn">recruiting</a></li>
                 </ul>
             </nav>
         </header>
